--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>bookme-frontend</title>
+  <title>BookMe</title>
 </head>
 
 <body class="bg-light-dark dark:bg-dark-dark text-light-text-dark dark:text-dark-text-dark">
